# agent-teams

./: .env.example  .env.infisical.example  .gitignore  .snyk  AGENTS.md  CLAUDE-CODE-START.md  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  USAGE-POWER.md  docker-compose.dev.yml  docker-compose.images.yml  docker-compose.prod.yml  docker-compose.secrets.yml  docker-compose.yml  package.json  readme_dev.md  readme_quota-efficiency.md  readme_quota-efficiency.th.md  readme_remote-access.md
api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 2026_05_04_2130_initial_schema.py  2026_05_08_0300_soft_delete_and_lead.py  2026_05_08_1600_tasks_parent_task_id.py  2026_05_09_0900_rename_lead_to_team.py  2026_05_09_1000_run_mode_and_consent.py  2026_05_10_0050_drop_active_one.py  2026_05_10_1100_task_kind_and_recurrence.py  2026_05_10_1300_sessions_and_runs.py  2026_05_10_1500_session_ceilings_extension.py  2026_05_10_1700_tasks_scheduled_at.py  2026_05_11_1200_tasks_is_pending.py  2026_05_11_1700_projects_paths_repo_overrides.py  2026_05_12_1200_tasks_halt_reason.py  2026_05_12_1300_tasks_acceptance_criteria.py  2026_05_12_1400_tasks_task_type.py  2026_05_12_1500_row_changed_triggers.py  2026_05_12_1600_tasks_blocked_by.py  2026_05_12_1700_tasks_sort_order.py  2026_05_12_2137_tasks_interaction_kind.py  2026_05_13_1132_projects_sources.py  2026_05_13_1430_projects_team_general.py  2026_05_13_1458_tasks_task_kind_default_ai.py  2026_05_13_1700_tasks_cancelled_and_reason.py  2026_05_14_0001_tasks_subagent_models.py  2026_05_16_0001_tasks_cost_estimates.py  2026_05_16_0030_projects_budget_caps.py  2026_05_16_0100_projects_tools_config.py  2026_05_16_0200_tool_calls.py  2026_05_16_0300_projects_hitl_timeout.py  2026_05_16_0844_tasks_audit_report_retry_count.py  2026_05_17_0900_health_monitor.py  2026_05_17_1000_transactions_ledger.py  2026_05_17_1100_projects_approval_policies.py  2026_05_17_1200_pytest_runner_role.py  2026_05_17_1300_tasks_max_active_children.py  2026_05_17_1400_tasks_template_auto_run_confirmed_at.py  2026_05_17_1500_tasks_requires_human_review.py  2026_05_18_1530_projects_team_content.py  2026_05_19_1700_aa1_kill_switch.py  2026_05_19_1700_gov1_kill_switch.py  (+35 more)
api/scripts/: __init__.py  generate_vapid_keys.py  seed.py  telegram_poller.py  validate_agents.py
api/src/: __init__.py  constants.py  db.py  main.py  pricing.py  settings.py
api/src/middleware/: __init__.py  rate_limit.py  request_size.py
api/src/models/: __init__.py  base.py  credential.py  email_oauth_token.py  handoff_template.py  integration_setting.py  milestone.py  project.py  project_resource.py  projects_audit.py  push_subscription.py  session.py  task.py  task_comment.py  task_gate.py  task_template.py  tool_call.py  transaction.py  usage_event.py
api/src/routers/: __init__.py  agent_gallery.py  agent_validation.py  audit.py  credentials.py  dashboard.py  decisions.py  digest.py  events.py  handoff_templates.py  ingest.py  milestones.py  notifications.py  pl.py  projects.py  push.py  push_ntfy.py  resources.py  scaffold.py  sessions.py  settings.py  shared_search.py  task_gates.py  task_outputs.py  task_templates.py  tasks.py  teams.py  templates.py  tool_calls.py  tools_calendar.py  tools_directory.py  tools_email.py  transactions.py  usage.py  usage_events.py  user_actions.py  webhooks.py
api/src/schemas/: __init__.py  action_template.py  agent_metadata.py  ai_task.py  audit.py  credential.py  dashboard.py  email_ingest.py  handoff_template.py  integration.py  pl.py  (+19 more)
api/tests/: conftest.py  test_aa3_pause_flag.py  test_action_templates_smoke.py  test_adjust_continue_annotation.py  test_agent_context_sanitizer.py  test_agent_gallery.py  test_agent_validation.py  test_agent_write.py  test_ai_task_parser.py  test_alembic_migration_target_gate.py  test_approval_evaluator.py  test_approval_evaluator_parity.py  test_audit_archive_smoke.py  test_audit_flags.py  test_audit_rollup.py  test_backup.py  test_backup_catchup.py  test_backup_min_size.py  test_budget_enforcer.py  test_budget_gate.py  test_budget_gate_stale_eviction.py  test_calendar_read.py  test_calendar_tools.py  test_compact_runner.py  test_conftest_invariant.py  test_content_moderation.py  test_cors.py  test_cost_forecast.py  test_cost_tracker.py  test_credentials_crypto.py  test_credentials_router.py  test_dashboard_active_tasks.py  test_db_build_engine_canary.py  test_db_isolation.py  test_db_safety.py  test_decision_payload_smoke.py  test_decisions_option_skip.py  test_digest_integration.py  test_digest_router.py  test_digest_router_failures.py  (+127 more)
langgraph/: .gitignore  Dockerfile  README.md  agent_context_sanitizer.py  approval_evaluator.py  audit.py  config.py  content_safety.py  gemini_schema.py  graph.py  hitl.py  langgraph.json  llm.py  multiboard.py  nodes.py  pyproject.toml  safety_prelude.txt  state.py  worker.py
langgraph/scenarios/: __init__.py  capability_probe.py  regression_pack.py
langgraph/tests/: conftest.py  test_agent_context_sanitizer.py  test_approval_evaluator_parity.py  test_approval_evaluator_parity_fixture.py  test_approval_evaluator_ui_predicates.py  test_auditor.py  test_auditor_demo_branches.py  test_content_safety.py  test_database_uri_validation.py  test_gemini_schema.py  test_hitl.py  test_langgraph_cache.py  test_llm.py  test_nodes_compaction.py  test_nodes_prompt.py  test_safety_prelude.py  test_specialist_factory.py  test_specialist_tool_loop.py  test_state.py  test_supervisor_routing.py  test_usage_reporting.py  test_worker.py  test_worker_bug_fixes.py  test_worker_cross_task_handoff.py  test_worker_effort.py  test_worker_effort_file.py  test_worker_finalize_body.py  test_worker_hitl_usage.py  test_worker_l17_gate.py  test_worker_multiboard.py  test_worker_policy_hook.py  test_worker_prereq_gate.py  test_worker_requeue_2664.py  test_worker_resume_decision.py  test_worker_retry.py  test_worker_sanitizer.py  test_working_path_resolution.py
langgraph/tools/: __init__.py  base.py  iteration_limit.py  permission_gate.py  registry.py  sandbox.py
(+778 files in other folders)
