[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-teams-api"
version = "0.1.0"
description = "FastAPI backend for the agent-teams self-hosted Kanban (dogfood project)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "agent-teams" }]
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "croniter>=2.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=0.24,<2.0",
    "httpx>=0.27,<1.0",
    "pip-audit>=2.7,<3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
