[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-teams-api"
version = "0.1.0"
description = "FastAPI backend for the agent-teams self-hosted Kanban (dogfood project)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "agent-teams" }]
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "croniter>=2.0,<7.0",
    "filelock>=3.13,<4.0",
    "apscheduler>=3.10,<4.0",
    "anthropic>=0.40,<1.0",
    "openai>=1.0,<2.0",
    "sse-starlette>=2.0,<4.0",
    # Kanban #959 — off-site encrypted backup. boto3 covers AWS S3 + Backblaze B2
    # + Cloudflare R2 + Wasabi via endpoint_url. pyrage = Rust `age` Python binding
    # for encryption (single-recipient public-key, private key stays offline).
    "boto3>=1.43,<2.0",
    "pyrage>=1.2,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=0.24,<2.0",
    "httpx>=0.27,<1.0",
    "pip-audit>=2.7,<3.0",
    "respx>=0.20,<1.0",
    "moto[s3]>=5.0,<6.0",  # Kanban #959 — S3 mocking for backup unit tests.
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
