[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-teams-api"
version = "0.6.1"
description = "FastAPI backend for the agent-teams self-hosted Kanban (dogfood project)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "agent-teams" }]
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "croniter>=2.0,<7.0",
    "filelock>=3.13,<4.0",
    "apscheduler>=3.10,<4.0",
    "anthropic>=0.40,<1.0",
    "openai>=1.0,<2.0",
    "sse-starlette>=2.0,<4.0",
    # Kanban #959 — off-site encrypted backup. boto3 covers AWS S3 + Backblaze B2
    # + Cloudflare R2 + Wasabi via endpoint_url. pyrage = Rust `age` Python binding
    # for encryption (single-recipient public-key, private key stays offline).
    "boto3>=1.43,<2.0",
    "pyrage>=1.2,<2.0",
    # Kanban #1124 (L19 prevention) — per-IP rate limit on POST /api/projects.
    # In-memory storage (default) is fine for single-instance docker-compose dev;
    # production-scale would swap to a Redis backend via slowapi config.
    "slowapi>=0.1.9,<1.0",
    # Kanban #955.A — Web Push adapter (notify_web_push.py). Pure-Python wrapper
    # around the Web Push protocol (RFC 8030 + 8291 + 8292). No native deps.
    "pywebpush>=1.14,<3.0",
    # Kanban #1326 (M3) — symmetric Fernet encryption for the credentials vault
    # (project_credentials.ciphertext). Master key in env CREDENTIALS_MASTER_KEY
    # (Fernet url-safe base64, 32 bytes). >=42 ships the modern Fernet API.
    # FIX-2 (#1609): CVE-2026-26007 + PYSEC-2026-35 + PYSEC-2026-36 require >=46.0.7.
    # Previous upper bound <46.0 blocked the patch. Bumped to >=46.0.7,<47.0.
    "cryptography>=46.0.7,<47.0",
    # Kanban #1437 — signed-token opt-out link in digest emails. URLSafeTimedSerializer
    # produces compact URL-safe HMAC-signed tokens with built-in expiry. No new
    # key material required — reuses SECRET_KEY (same posture as session signing).
    "itsdangerous>=2.1,<3.0",
    # Kanban #1604 — Gmail tools (api/src/tools/email/gmail_client.py).
    # google-auth: OAuth credentials object + token refresh.
    # google-auth-oauthlib: 3-legged OAuth Flow helper (auth_url + token exchange).
    # google-api-python-client: Gmail API discovery client (users.messages.list/trash).
    "google-auth>=2.0,<3.0",
    "google-auth-oauthlib>=1.0,<2.0",
    "google-api-python-client>=2.0,<3.0",
    # Kanban #1608 — Outlook tools (api/src/tools/email/outlook_client.py).
    # msal handles the AAD OAuth dance (authorization-code flow with personal
    # MSA accounts under tenant='consumers'). Graph REST calls go through httpx
    # — we deliberately avoid msgraph-sdk (too heavy).
    "msal>=1.28,<2.0",
    # FIX-4 (#1609): httpx is a direct runtime dep (outlook_client.py imports
    # and uses it for Graph REST calls). msal does NOT declare it as a transitive
    # dep. Moved from [dev] to here so it's present in production installs.
    "httpx>=0.27,<1.0",
    # Kanban #1016 — agent-frontmatter validator. pyyaml was an undeclared
    # transitive dep (installed via responses). Declared explicitly so the
    # dependency is visible and pinned. No container rebuild needed (6.0.3
    # already present at time of declaration).
    "pyyaml>=6.0,<7.0",
    # Kanban #1309 — multipart/form-data parsing for the resources upload
    # endpoint (FastAPI UploadFile/Form REQUIRE python-multipart). Pure-Python,
    # no native deps. Container MUST be rebuilt after adding this (Lead/devops).
    "python-multipart>=0.0.9,<0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=0.24,<2.0",
    "pip-audit>=2.7,<3.0",
    "respx>=0.20,<1.0",
    "moto[s3]>=5.0,<6.0",  # Kanban #959 — S3 mocking for backup unit tests.
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
