# langgraph engine package — Phase 4 (Kanban #851 scaffold).
# Versions pinned 2026-05-14 from PyPI latest stable. Re-validate when LangGraph
# 2.x lands or langchain-* bumps a major (perishable; LangGraph moves fast).
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-teams-langgraph"
version = "0.1.0"
description = "LangGraph engine container for agent-teams (supervisor + specialist subagents)."
requires-python = ">=3.12"
dependencies = [
    # Core graph runtime + Postgres checkpoint backend.
    "langgraph==1.2.0",
    "langgraph-checkpoint-postgres==3.1.0",
    "langgraph-cli==0.4.26",
    # LLM provider adapters (multi-provider via LANGGRAPH_LLM_PROVIDER).
    "langchain-anthropic==1.4.3",
    "langchain-openai==1.2.1",
    "langchain-core==1.4.0",
    # FastAPI server for the stub /ok endpoint (#851); #850 may swap to a
    # langgraph-cli built image where uvicorn comes in transitively.
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    # AsyncPostgresSaver wants psycopg (v3) as its driver.
    "psycopg[binary]>=3.2,<4",
]

[tool.setuptools]
# Single-module package — graph.py at the root. No discovery needed.
py-modules = ["graph"]
