# langgraph engine package — Phase 4 (Kanban #851 scaffold).
# Versions pinned 2026-05-14 from PyPI latest stable. Re-validate when LangGraph
# 2.x lands or langchain-* bumps a major (perishable; LangGraph moves fast).
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-teams-langgraph"
version = "0.1.0"
description = "LangGraph engine container for agent-teams (supervisor + specialist subagents)."
requires-python = ">=3.12"
dependencies = [
    # Core graph runtime + Postgres checkpoint backend.
    "langgraph==1.2.0",
    "langgraph-checkpoint-postgres==3.1.0",
    "langgraph-cli==0.4.26",
    # LLM provider adapters (multi-provider via LANGGRAPH_LLM_PROVIDER).
    "langchain-anthropic==1.4.3",
    "langchain-openai==1.2.1",
    "langchain-core==1.4.0",
    # FastAPI server for the stub /ok endpoint (#851); #850 may swap to a
    # langgraph-cli built image where uvicorn comes in transitively.
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    # AsyncPostgresSaver wants psycopg (v3) as its driver.
    "psycopg[binary]>=3.2,<4",
]

[project.optional-dependencies]
# Test deps — kept out of the prod image install path. Pinned 2026-05-14.
# Install in dev / CI with `pip install -e .[test]`.
test = [
    "pytest==8.3.4",
]

[tool.setuptools]
# Flat-layout: each .py at the langgraph/ root is a top-level module inside
# the container (WORKDIR /app; sources copied to /app/*.py). #850 added
# state, nodes, llm alongside the existing graph module.
py-modules = ["graph", "state", "nodes", "llm"]

[tool.pytest.ini_options]
# Run with `pytest tests/` from /app inside the container, or
# `docker compose exec -T langgraph pytest tests/`.
testpaths = ["tests"]
